opt/space/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trading-api-service
  namespace: trading-api  
spec:
  type: ClusterIP
  selector:
    name: trading-api
  ports:
  - port: 80
    targetPort: 80
