opt/space/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: trading-api-ingress
  namespace: trading-api
spec:
  rules:
    - host: tradin-api-rld.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trading-api-service
                port:
                  number: 80
